# network-protocol

./: .gitignore  README.md  pom.xml
coap/client/: Californium.properties  pom.xml
coap/server/: pom.xml
coap2/client/: pom.xml
coap2/server/: Californium.properties  pom.xml
control-dimming/client/: Californium.properties
control-dimming/origin-code/client/: sim.cfg
control-dimming/origin-code/server/: Californium.properties
hoobs/: .gitignore  week1.md
hoobs/device/: pom.xml
hoobs/hoobs-batch/: pom.xml
hoobs/hoobs-proxy/: Californium.properties  pom.xml
hoobs/hoobs-server/: pom.xml
hoobs/proxy/: Californium.properties  pom.xml
http-client/: nothing.txt  pom.xml
http-client/src/main/resources/: log4j.properties
http-server/: index.html  pom.xml
pi4j-practice/: pom.xml
src/main/resources/: log4j.properties
url-based-photo/: pom.xml
url-based-photo/client/ubp-client-cpp-ver/: .gitignore  CMakeLists.txt  execute.sh  install.sh
url-based-photo/client/ubp-client-cpp-ver/src/: RootUnit.cpp  RootUnit.h  main.cpp
url-based-photo/client/ubp-client-cpp-ver/src/api/: PhotoManager.cpp  PhotoManager.h
url-based-photo/client/ubp-client-cpp-ver/src/image/: ImagePool.cpp  ImagePool.h
url-based-photo/client/ubp-client-cpp-ver/src/model/: Photo.cpp  Photo.h  PhotoGroup.cpp  PhotoGroup.h
url-based-photo/client/ubp-client-cpp-ver/src/util/: ImageDownloader.cpp  ImageDownloader.h  ImageFileManager.cpp  ImageFileManager.h  JsonParser.cpp  JsonParser.h  ThumbnailMaker.cpp  ThumbnailMaker.h
url-based-photo/client/ubp-client-cpp-ver/src/view/: PhotoThumbnail.cpp  PhotoThumbnail.h  PhotoThumbnailForUpload.cpp  PhotoThumbnailForUpload.h  PhotoViewer.cpp  PhotoViewer.h  ThumbnailViewer.cpp  ThumbnailViewer.h  UploadView.cpp  UploadView.h  ViewerView.cpp  ViewerView.h
url-based-photo/client/ubp-client-cpp-ver/test/: ApiTest.cpp  QJsonParserTest.cpp
url-based-photo/client/ubp_client_cpp_ver_windows/: .gitignore  ubp_client_cpp_ver_windows.sln
url-based-photo/client/ubp_client_cpp_ver_windows/github-uploader-binary/: .gitignore  README.md  package.json
url-based-photo/client/ubp_client_cpp_ver_windows/ubp_client_cpp_ver_windows/: ImageDownloader.cpp  ImageDownloader.h  ImageFileManager.h  ImagePool.cpp  ImagePool.h  (+30 more)
(+182 files in other folders)
